spacing for correct style

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,11 +56,6 @@ div#request_number{
 	height: 250px;
 }
 
-div#request_number form input{
-	margin-right: 15px;
-	vertical-align:bottom;
-}
-
 #email{
 	width: 200px;
 }
@@ -105,6 +100,11 @@ div#request-options{
 #request-options a{
 	color: #ffffff;
 }
+div#request-options form input{
+	margin-right: 15px;
+	vertical-align:bottom;
+}
+
 #existing-info{
 	width: 500px;
 	height: 100px;
